; ModuleID = '/home/carl/AnghaBench/git/extr_refs.c_dwim_log.c'
source_filename = "/home/carl/AnghaBench/git/extr_refs.c_dwim_log.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_id = type { i32 }

@the_repository = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dwim_log(i8* %0, i32 %1, %struct.object_id* %2, i8** %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.object_id*, align 8
  %8 = alloca i8**, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.object_id* %2, %struct.object_id** %7, align 8
  store i8** %3, i8*** %8, align 8
  %9 = load i32, i32* @the_repository, align 4
  %10 = load i8*, i8** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = load %struct.object_id*, %struct.object_id** %7, align 8
  %13 = load i8**, i8*** %8, align 8
  %14 = call i32 @repo_dwim_log(i32 %9, i8* %10, i32 %11, %struct.object_id* %12, i8** %13)
  ret i32 %14
}

declare dso_local i32 @repo_dwim_log(i32, i8*, i32, %struct.object_id*, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
